Add style for jsgrid

--- a/AsociatiaDeTarani/AsociatiaDeTarani/Views/Client/Index.cshtml
+++ b/AsociatiaDeTarani/AsociatiaDeTarani/Views/Client/Index.cshtml
@@ -21,7 +21,7 @@
         </div>
 
         <div class="col-sm-3">
-            <button type="submit" class="btn btn-secondary"><i class="fa fa-search">  Cauta</i></button>
+            <button type="submit" class="btn btn-dark"><i class="fa fa-search">  Cauta</i></button>
         </div>
     </form>
 
