--- a/AsociatiaDeTarani/AsociatiaDeTarani/Views/Producer/Index.cshtml
+++ b/AsociatiaDeTarani/AsociatiaDeTarani/Views/Producer/Index.cshtml
@@ -4,18 +4,12 @@
     @model ProductsAndProducersListViewModel
 }
 
-
-
-
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.css" />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid-theme.min.css" />
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js"></script>
 
-<div id="jsGrid2"></div>
+<div id="jsGrid2" style="margin-top: 4em;"></div>
 
-<div id="label" style="font-size:25px;padding-top:2em"></div>
+<div id="label" style="font-size:25px; padding-top:2em; color:white"></div>
 
 <script src="~/js/producerJsGrid.js" asp-append-version="true"></script>
 
