--- a/AsociatiaDeTarani/AsociatiaDeTarani/Views/Product/Index.cshtml
+++ b/AsociatiaDeTarani/AsociatiaDeTarani/Views/Product/Index.cshtml
@@ -3,12 +3,10 @@
 }
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.css" />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid-theme.min.css" />
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js"></script>
 
 <p>
-    <a id="addProduct" asp-controller="Product" asp-action="New" class="btn btn-sm btn-secondary rounded-0 text-uppercase"><i class="fas fa-plus-circle"></i> Adauga produs nou</a>
+    <a id="addProduct" asp-controller="Product" asp-action="New" class="btn btn-sm btn-dark rounded-0 text-uppercase"><i class="fas fa-plus-circle"></i> Adauga produs nou</a>
 </p>
 <div id="productJsGrid"></div>
 
