--- a/AsociatiaDeTarani/AsociatiaDeTarani/Views/Order/OrderHistory.cshtml
+++ b/AsociatiaDeTarani/AsociatiaDeTarani/Views/Order/OrderHistory.cshtml
@@ -3,11 +3,9 @@
 }
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.css" />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid-theme.min.css" />
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js"></script>
 
-<div id="orderJsGrid"></div>
+<div id="orderJsGrid" style="margin-top: 4em"></div>
 
 
 <script src="~/js/orderJsGrid.js" asp-append-version="true"></script>
