--- a/AsociatiaDeTarani/AsociatiaDeTarani/Views/Product/New.cshtml
+++ b/AsociatiaDeTarani/AsociatiaDeTarani/Views/Product/New.cshtml
@@ -53,15 +53,15 @@
                         <div class="form-group">
                             <div class="custom-file">
 
-                                <label for="files" class="btn btn-secondary">Selecteaza imagine</label>
-                                <input id="files" style="visibility:hidden;" type="file" onchange="loadFile(event)">
+                                <label asp-for="PhotoUrl" for="customFile" class="btn btn-secondary">Selecteaza imagine</label>
+                                <input asp-for="PhotoUrl" id="customFile" style="visibility:hidden;" type="file" onchange="loadFile(event)">
 
-                            </div>                            
+                            </div>
                             <span asp-validation-for="PhotoUrl" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="col-md-4">
-                       <img id="output" style="width:8em;border-radius:1em;margin-bottom:0.5em" />                        
+                        <img id="output" style="width:8em;border-radius:1em;margin-bottom:0.5em" />
                     </div>
                 </div>
                 <div class="form-group" style="float:right">
