--- a/AsociatiaDeTarani/AsociatiaDeTarani/Views/Order/OrderHistory.cshtml
+++ b/AsociatiaDeTarani/AsociatiaDeTarani/Views/Order/OrderHistory.cshtml
@@ -7,8 +7,27 @@
 
 <div id="orderJsGrid" style="margin-top: 4em"></div>
 
+<!-- Modal -->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalCenterTitle">Lista de produse a comenzii</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div id="orderModalGrid">
+
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Inchide</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script src="~/js/orderJsGrid.js" asp-append-version="true"></script>
-<script>
-    orderJsGrid.init();
-</script>
+<script src="~/js/modalProductsGrid.js" asp-append-version="true"></script>
