Css added to modal

--- a/AsociatiaDeTarani/AsociatiaDeTarani/Views/Order/OrderHistory.cshtml
+++ b/AsociatiaDeTarani/AsociatiaDeTarani/Views/Order/OrderHistory.cshtml
@@ -9,8 +9,8 @@
 
 <!-- Modal -->
 <div class="modal" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
+    <div class="modal-dialog modal-dialog-centered" role="document" >
+        <div class="modal-content"  style="background-color:bisque">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalCenterTitle">Lista de produse a comenzii</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -18,11 +18,13 @@
                 </button>
             </div>
             <div class="modal-body">
-                <table id="orderedProductsTable" class="table table-bordered">
-                    <tr>
-                        <th scope="col">Produs</th>
-                        <th scope="col">Cantitate</th>
-                    </tr>
+                <table id="orderedProductsTable" class="table table-warning">
+                    <thead style="background-color: #095d6a;color:white">
+                        <tr>
+                            <th scope="col">Produs</th>
+                            <th scope="col">Cantitate</th>
+                        </tr>
+                    </thead>
                 </table>
             </div>
             <div class="modal-footer">
