Fixed some bugs

--- a/AsociatiaDeTarani/AsociatiaDeTarani/Views/Order/OrderHistory.cshtml
+++ b/AsociatiaDeTarani/AsociatiaDeTarani/Views/Order/OrderHistory.cshtml
@@ -25,6 +25,7 @@
                             <th scope="col">Cantitate</th>
                         </tr>
                     </thead>
+                    <tbody></tbody>
                 </table>
             </div>
             <div class="modal-footer">
